--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -30,7 +30,7 @@ format:
 
 ::: {.callout-note}
 Daily Summary — Sept 29  
-The travel into Galicia was a bit of an adventure. My flight into Madrid was delayed, which made me miss my original train. I caught a later one, but even that got interrupted because wildfires had closed part of the tracks, so we all had to switch to a bus for the last stretch. By the time I finally made it to Sarria about 9:30 pm, I was ready to settle in. I checked into my hostel and had a pilgrim dinner with a new friend from Salamanca who arrived around the same time. The meal was classic Galician: caldo gallego, Estrella beer, and roasted pork. Galicia is famous for its rain, but so far the weather has been unexpectedly kind. I also got my pilgrim credential and my very first stamp—fittingly, at the restaurant where I ate dinner.  
+The travel into Galicia was a bit of an adventure. My flight into Madrid was delayed, which made me miss my original train. I caught a later one, but even that got interrupted because wildfires had closed part of the tracks, so we all had to switch to a bus for the last stretch. By the time I finally made it to Sarria about 9:30 pm, I was ready to settle in. I checked into my hostel and had a pilgrim dinner with a new friend from Salamanca who arrived around the same time. The meal was classic Galician: caldo gallego, Estrella beer, and roasted pork. Galicia is famous for its rain, but so far the weather has been unexpectedly kind. I also got my pilgrim credential and my very first stamp at the restaurant where I ate dinner.  
 :::
 
 ### Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)
